@@ -41,12 +41,16 @@ public class AppUserDaoImpl extends BaseDaoImpl<AppUser> implements AppUserDao,
 		List list = findByHql(hql, params);
 		AppUser user = null;
 		if (list.size() != 0) {
-			user = (AppUser) list.get(0);
-			String hql2 = "select count(*) from AppUser";
-			Object obj = findUnique(hql2, null);
-			//if (new Integer(obj.toString()).intValue() > 11) {
-			if (new Integer(obj.toString()).intValue() > new Integer(AppUtil.getSysConfig().get("limit").toString()).intValue()) {
-				user.setStatus(Short.valueOf((short) 0));
+			if (!AppUtil.getSysConfig().get("limit").toString().equals("-1")) {
+				user = (AppUser) list.get(0);
+				String hql2 = "select count(*) from AppUser";
+				Object obj = findUnique(hql2, null);
+				//if (new Integer(obj.toString()).intValue() > 11) {
+				if (new Integer(obj.toString()).intValue() > new Integer(
+						AppUtil.getSysConfig().get("limit").toString())
+						.intValue()) {
+					user.setStatus(Short.valueOf((short) 0));
+				}
 			}
 		}
 
@@ -59,11 +63,15 @@ public class AppUserDaoImpl extends BaseDaoImpl<AppUser> implements AppUserDao,
 		List list = findByHql(hql, params);
 		AppUser user = null;
 		if (list.size() != 0) {
-			user = (AppUser) list.get(0);
-			String hql2 = "select count(*) from AppUser";
-			Object obj = findUnique(hql2, null);
-			if (new Integer(obj.toString()).intValue() > new Integer(AppUtil.getSysConfig().get("limit").toString()).intValue()) {
-				user.setStatus(Short.valueOf((short) 0));
+			if (!AppUtil.getSysConfig().get("limit").toString().equals("-1")) {
+				user = (AppUser) list.get(0);
+				String hql2 = "select count(*) from AppUser";
+				Object obj = findUnique(hql2, null);
+				if (new Integer(obj.toString()).intValue() > new Integer(
+						AppUtil.getSysConfig().get("limit").toString())
+						.intValue()) {
+					user.setStatus(Short.valueOf((short) 0));
+				}
 			}
 		}
 
@@ -125,9 +133,12 @@ public class AppUserDaoImpl extends BaseDaoImpl<AppUser> implements AppUserDao,
 		});
 		String hql2 = "select count(*) from AppUser";
 		Object obj = findUnique(hql2, null);
-		//if (new Integer(obj.toString()).intValue() > new Integer(AppUtil.getSysConfig().get("limit").toString())) {
-		if (new Integer(obj.toString()).intValue() > new Integer(AppUtil.getSysConfig().get("limit").toString()).intValue()) {
-			user.setStatus(Short.valueOf((short) 0));
+		if (!AppUtil.getSysConfig().get("limit").toString().equals("-1")) {
+			//if (new Integer(obj.toString()).intValue() > new Integer(AppUtil.getSysConfig().get("limit").toString())) {
+			if (new Integer(obj.toString()).intValue() > new Integer(AppUtil
+					.getSysConfig().get("limit").toString()).intValue()) {
+				user.setStatus(Short.valueOf((short) 0));
+			}
 		}
 		return user;
 	}
